--- a/index.html
+++ b/index.html
@@ -1,97 +1,38 @@
-<form name="contactform" method="post" action="send_form_email.php">
- 
-<table width="450px">
- 
-<tr>
- 
- <td valign="top">
- 
-  <label for="first_name">First Name *</label>
- 
- </td>
- 
- <td valign="top">
- 
-  <input  type="text" name="first_name" maxlength="50" size="30">
- 
- </td>
- 
-</tr>
- 
-<tr>
- 
- <td valign="top"">
- 
-  <label for="last_name">Last Name *</label>
- 
- </td>
- 
- <td valign="top">
- 
-  <input  type="text" name="last_name" maxlength="50" size="30">
- 
- </td>
- 
-</tr>
- 
-<tr>
- 
- <td valign="top">
- 
-  <label for="email">Email Address *</label>
- 
- </td>
- 
- <td valign="top">
- 
-  <input  type="text" name="email" maxlength="80" size="30">
- 
- </td>
- 
-</tr>
- 
-<tr>
- 
- <td valign="top">
- 
-  <label for="telephone">Telephone Number</label>
- 
- </td>
- 
- <td valign="top">
- 
-  <input  type="text" name="telephone" maxlength="30" size="30">
- 
- </td>
- 
-</tr>
- 
-<tr>
- 
- <td valign="top">
- 
-  <label for="comments">Comments *</label>
- 
- </td>
- 
- <td valign="top">
- 
-  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
- 
- </td>
- 
-</tr>
- 
-<tr>
- 
- <td colspan="2" style="text-align:center">
- 
-  <input type="submit" value="Submit">   <a href="http://www.freecontactform.com/email_form.php">Email Form</a>
- 
- </td>
- 
-</tr>
- 
-</table>
- 
-</form>
+<p></p>MVP+ Rank
+Get MVP+ Tag
+Reset BuildBattle Arenas
+Be “Death” in deathrun
+Priority over Full server
+Shout out in chat
+Light blue chat colour
+Play BETA Games
+Control Spawn fireworks
+Choose one Tag
+Blue MVP+ Tag on the forums
+More features will be added as the server develops
+MVP Rank
+Get MVP Tag
+Reset BuildBattle arenas
+Be “Death” in deathrun
+Priority over Full server
+Shout out in chat
+Light blue chat colour
+Play BETA Games
+Control Spawn fireworks
+Blue MVP Tag on the forums
+More features will be added as the server develops
+Get VIP+ Tag
+Get white chat
+Shout out in chat
+Play BETA Games
+Control Spawn fireworks
+Blue VIP+ Tag on the forums
+VIP Rank
+Get VIP Tag
+Get white chat
+Shout out in chat
+Play BETA Games
+Control Spawn fireworks
+Blue VIP Tag on the forums
+More features will be added as the server develops</p>
+
